--- a/package.json
+++ b/package.json
@@ -6,8 +6,7 @@
   "main": "index.js",
   "scripts": {
     "devNodemon": "nodemon src/index.js",
-    "devNode": "node --watch src/index.js",
-    "start": "node src/index.js"
+    "devNode": "node --watch src/index.js"
   },
   "keywords": [],
   "author": "",
